<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_primervalor"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/et_primervalor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_segundovalor"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="46dp"
        android:ems="10"
        android:hint="@string/et_segundovalor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_primervalor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="152dp"
        android:layout_height="193dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_segundovalor">

        <RadioButton
            android:id="@+id/rb_Sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_Sumar" />

        <RadioButton
            android:id="@+id/rb_Restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_Restar" />

        <RadioButton
            android:id="@+id/rb_Multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_Multiplicar" />

        <RadioButton
            android:id="@+id/rb_Dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_Dividir" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_operar"
        android:layout_width="172dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:onClick="Calcular"
        android:text="@string/btn_Operar"
        app:layout_constraintEnd_toStartOf="@+id/btn_Siguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_ops" />

    <TextView
        android:id="@+id/tvw_Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="179dp"
        android:text="@string/tvw_Resultado"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_operar" />

    <CheckBox
        android:id="@+id/chbx_sumar"
        android:layout_width="159dp"
        android:layout_height="51dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="37dp"
        android:text="@string/rb_Sumar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/et_segundovalor" />

    <CheckBox
        android:id="@+id/chbx_restar"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="38dp"
        android:text="@string/rb_Restar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/chbx_sumar" />

    <CheckBox
        android:id="@+id/chbx_multiplicar"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="38dp"
        android:text="@string/rb_Multiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/chbx_restar" />

    <CheckBox
        android:id="@+id/chbx_dividir"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="36dp"
        android:text="@string/rb_Dividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/chbx_multiplicar" />

    <Spinner
        android:id="@+id/spinner_ops"
        android:layout_width="297dp"
        android:layout_height="43dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbx_dividir" />

    <Button
        android:id="@+id/btn_Siguiente"
        android:layout_width="174dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="22dp"
        android:text="@string/btn_Siguiemte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_ops" />
</androidx.constraintlayout.widget.ConstraintLayout>